test/good/ckannot.ept
node f(x:int;c:bool) returns (y:int)
let
  y = (x :: .) when c;
tel

