test/bad/clock_annot3.ept
node f(x:int) returns (y:int on ck; ck,ck2:bool)
let
  ck = true;
  ck2 = true;
  y = x when ck2
tel

